fixed social media icon spacings

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,7 +100,6 @@ text-decoration: none;
   width:1px;
   background-color: white;
   transition: all 0.15s;
-  margin-bottom: 1vh
 }
 
 .navlinelow-bot {
